samples/_failures_safe/1761726824_cb935a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_647c4858.c: In function ‘main’:
./samples/SAFE/__tmp_647c4858.c:157:5: error: expected expression at end of input
  157 |     for (int i =
      |     ^~~
./samples/SAFE/__tmp_647c4858.c:157:5: error: expected declaration or statement at end of input
